--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASS=
 DB_NAME=earngigs
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=g7D^9y@Bf!k3qPz*JxR%6kVn$H8tLmZ5
+
+
